--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo2"
     tools:context=".vista.Login">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:padding="10dp"
         android:orientation="vertical">
+
         <TextView
             android:text="@string/IniciarSesionTXT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/manrope"
+            android:textColor="#FFFFFF"
             android:textSize="25sp"
-            android:gravity="center"
-            />
+            android:gravity="center" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="200dp"
@@ -28,61 +30,65 @@
             app:lottie_loop="true"
             app:lottie_autoPlay="true"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
+            app:boxBackgroundColor="#FFFFFF"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp">
 
             <EditText
                 android:id="@+id/correoLogin"
-                android:hint="@string/correoLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/icono_correo"
                 android:drawablePadding="10dp"
-                android:padding="20dp"
-                android:fontFamily="@font/manrope"
+                android:hint="@string/correoLogin"
                 android:inputType="textEmailAddress"
-                />
+                android:padding="20dp"
+                android:textColor="#000000"
+                android:textColorHint="#0B0A0A" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxBackgroundColor="#FFFFFF"
             app:passwordToggleEnabled="true"
             android:layout_marginTop="15dp">
 
             <EditText
                 android:id="@+id/passPoling"
-                android:hint="@string/passPoling"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/icono_password"
                 android:drawablePadding="10dp"
-                android:padding="20dp"
-                android:fontFamily="@font/manrope"
+                android:hint="@string/passPoling"
                 android:inputType="textPassword"
-                />
+                android:padding="20dp"
+                android:textColor="#000000"
+                android:textColorHint="#0C0C0C" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/BtnLogeo"
             android:text="@string/BtnLogeo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/manrope"
             android:layout_marginTop="10dp"
+            android:textColor="#000000"
             />
+
         <TextView
             android:id="@+id/UsuarioNuevoTXT"
+            android:textColor="#000000"
             android:text="@string/UsuarioNuevoTXT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="10dp"
             android:textStyle="bold"
             android:gravity="center"
-            android:fontFamily="@font/manrope"
             android:layout_marginTop="20dp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </RelativeLayout>
