--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo2"
     tools:context=".vista.MainActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -25,6 +26,7 @@
             android:text="@string/app_name"
             android:textSize="30dp"
             android:layout_marginTop="15dp"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
