--- a/app/src/main/res/layout/activity_pantalla_de_carga.xml
+++ b/app/src/main/res/layout/activity_pantalla_de_carga.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_medicamento"
     tools:context=".vista.PantallaDeCarga">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -24,7 +25,7 @@
             android:textSize="30sp"
             android:layout_margin="15dp"
             android:text="@string/app_name"
-            android:fontFamily="@font/manrope"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
