--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:background="#B392E1"
+        android:background="@drawable/fondo_gradiente"
         app:menu="@menu/menu_botton">
 
 
