--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo2"
+    android:background="@drawable/fondo_gradiente"
     android:padding="16dp"
     tools:context=".vista.agenda">
 
@@ -39,7 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/titleDescriptionLayout"
         android:layout_marginTop="16dp"
-        android:text="Buscar Nombre" />
+        android:text="Buscar Nombre"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue_button"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,14 +56,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Eliminar Medicamento" />
+            android:textColor="@color/white"
+            android:text="Eliminar Medicamento"
+            android:backgroundTint="@color/blue_button"
+            />
 
         <Button
             android:id="@+id/btnRegistrarMedicamento"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Registrar Medicamento" />
+            android:text="Registrar Medicamento"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/blue_button"
+            />
     </LinearLayout>
 
 
